successfully fixed placement of hero-name on smaller screens

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -17,7 +17,7 @@
     position: fixed;
     z-index: 2;
     top: 0px;;
-    left: 35%; 
+    left: 35%;
     color: white;
   }
 
@@ -121,5 +121,9 @@
 @media all and (max-width: 700px) {
   .hero{
     background-color: orange;
+  }
+
+  .hero-name{
+    left: 37.45%;
   }
 }
